{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "8aa6152c-155b-4a06-b4c9-180dc367f1be",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "461fe860-4770-4d09-a95f-e7f71527b131",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Running",
                    "type": "Button",
                    "id": "fc0f97db-4ca5-4a40-9e4a-d3e573ae3124",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkipDialogue",
                    "type": "Button",
                    "id": "ec1c585c-7dfe-4765-9301-dd5a6049d494",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "2523a2f1-398d-465f-a918-99b774b6be1e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1f883781-c8d2-4a13-86d8-13a69460d57e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d7892033-16ab-4426-a4b7-90bf12a8ef7a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ec5b66e2-2d81-454a-a907-2e6d4c2d4dd2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "77859b19-4b73-4b3f-84d9-a0f1bb3f4a25",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "62262960-36ca-49b4-8939-c6e5cb664c1c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e803fe5c-4645-441d-ad72-121281d93195",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41b4ca73-1b39-4d04-8ffa-3e515cfe8bf4",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "OnBattle",
            "id": "a6f04ed5-fb03-4ea4-98fc-844e5883fe4c",
            "actions": [
                {
                    "name": "SkipDialogue",
                    "type": "Button",
                    "id": "9a21fa32-a36e-41cc-b8fb-ca3f0b821cc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "021c34e1-de19-44c9-90a4-5a277ebc7c96",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ccd9fcf-f9ad-411b-ab81-cb790216a2c5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}